Reverted the styling for the child div--listItem to the initial state and solved the alignment issue on mzima button--Expand-true

--- a/apps/web-mzima-client/src/app/settings/surveys/create-field-modal/create-field-modal.component.scss
+++ b/apps/web-mzima-client/src/app/settings/surveys/create-field-modal/create-field-modal.component.scss
@@ -91,7 +91,6 @@
 .list-item {
   padding: 8px;
   cursor: pointer;
-  border: none;
   font-size: 14px;
   line-height: 1.3;
   user-select: none;
@@ -107,7 +106,6 @@
 
   h3 {
     font-size: 16px;
-    text-align: left;
     line-height: 1.5;
     margin-bottom: 4px;
     color: var(--color-black);
@@ -115,7 +113,6 @@
 
   p {
     margin-bottom: 0;
-    text-align: left;
   }
 
   &--disabled {
